--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -171,4 +171,8 @@
     <color name="fastscroll_preview_text_color">#ffffff</color>
 
     <color name="google_gray">#F1F1F1</color>
+
+  <color name="button_text">#000000</color>
+  <color name="navigation_bar_color">@android:color/white</color>
+
 </resources>
