--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -15,13 +15,13 @@
     limitations under the License.
 -->
 <resources>
-    <color name="primary_color">#689F38</color>
-    <color name="permission_check_activity_background">@color/primary_color</color>
+    <color name="primary_color">#2f67a3</color>
+    <color name="permission_check_activity_background">@*com.android.messaging:color/primary_color</color>
 
     <!--  Action bar -->
     <color name="action_bar_title_text_color">#ffffff</color>
-    <color name="action_bar_background_color">@color/primary_color</color>
-    <color name="action_bar_background_color_dark">#537F2D</color>
+    <color name="action_bar_background_color">@*com.android.messaging:color/primary_color</color>
+    <color name="action_bar_background_color_dark">#2f67a3</color>
     <color name="contextual_action_bar_background_color">#ffffff</color>
     <color name="archived_conversation_action_bar_background_color">#9D9D9D</color>
     <color name="archived_conversation_action_bar_background_color_dark">#838383</color>
@@ -62,13 +62,13 @@
     <color name="message_text_color_outgoing">#ff323232</color>
     <color name="conversation_background">#eeeeee</color>
     <color name="conversation_edge_effect">#9d9d9d</color>
-    <color name="compose_message_send_color">@color/primary_color</color>
+    <color name="compose_message_send_color">@*com.android.messaging:color/primary_color</color>
     <color name="compose_message_send_color_pressed">#999999</color>
     <color name="message_bubble_color_outgoing">#ffffffff</color>
     <color name="message_error_bubble_color_incoming">#e2e2e2</color>
     <color name="message_audio_button_color_incoming">#ffffffff</color>
-    <color name="message_bubble_color_selected">#8BC34A</color>
-    <color name="message_image_selected_tint">#80689F38</color>
+    <color name="message_bubble_color_selected">#54c8ff</color>
+    <color name="message_image_selected_tint">#80007f7f</color>
     <color name="generic_video_icon">#ff808080</color>
 
     <!-- Base color used for color filtering. -->
@@ -87,7 +87,7 @@
     <color name="compose_contact_divider">#44000000</color>
     <color name="contact_picker_tab_pressed">#ddffffff</color>
     <color name="contact_picker_tab_underline">@android:color/white</color>
-    <color name="contact_list_alphabet_header">@color/primary_color</color>
+    <color name="contact_list_alphabet_header">@*com.android.messaging:color/primary_color</color>
     <color name="contact_picker_background">#ffffff</color>
     <color name="chips_dropdown_background_activated">#4285f4</color>
     <color name="chips_dropdown_background_pressed">#ededed</color>
@@ -109,13 +109,13 @@
     <color name="audio_picker_hint_text_color">#40000000</color>
     <color name="audio_picker_timer_text_color">#323232</color>
     <color name="audio_attachment_timer_text_color">#323232</color>
-    <color name="audio_progress_bar_color">@color/primary_color</color>
+    <color name="audio_progress_bar_color">@*com.android.messaging:color/primary_color</color>
 
     <color name="notification_sender_text">#9A9A9A</color>
     <color name="notification_secondary_text">#FFFFFF</color>
     <color name="notification_tertiary_text">#FFFFFF</color>
     <color name="wearable_notification_participants_count">#a2a2a2</color>
-    <color name="notification_accent_color">@color/primary_color</color>
+    <color name="notification_accent_color">@*com.android.messaging:color/primary_color</color>
     <color name="notification_warning_color">#ff0000</color>
     <color name="notification_subject_color">#99aaaaaa</color>
 
@@ -124,7 +124,7 @@
     <color name="people_and_options_header_text">#6d6d6d</color>
     <color name="people_and_options_list_divider">#cccccc</color>
 
-    <color name="fab_color">@color/primary_color</color>
+    <color name="fab_color">@*com.android.messaging:color/primary_color</color>
     <color name="fab_pressed_color">#3ea4dc</color>
     <color name="fab_ripple">#40ffffff</color>
 
@@ -132,9 +132,9 @@
     <color name="mms_indicator_color">#8BC34A</color>
     <color name="list_empty_text">#6d6d6d</color>
     <color name="low_storage_action_item_color">#ff000000</color>
-    <color name="unblock_item_text_color">@color/primary_color</color>
+    <color name="unblock_item_text_color">@*com.android.messaging:color/primary_color</color>
     <color name="open_conversation_animation_background_shadow">#40000000</color>
-    <color name="compose_notification_bar_background">@color/primary_color</color>
+    <color name="compose_notification_bar_background">@*com.android.messaging:color/primary_color</color>
 
     <color name="sim_selector_text_primary">#4d4d4d</color>
     <color name="sim_selector_text_secondary">#999999</color>
@@ -143,7 +143,7 @@
     <color name="sim_indicator_color_light">#ffffff</color>
     <color name="sim_indicator_color_dark">#323232</color>
 
-    <color name="text_highlight_color">#80689F38</color>
+    <color name="text_highlight_color">#802f67a3</color>
     <color name="search_view_text_cursor">#b0dddddd</color>
 
     <color name="button_bar_action_button_text_color">#03a9f4</color>
@@ -154,7 +154,7 @@
     <color name="group_mms_setting_text_color">#333333</color>
     <color name="settings_item_title_text_primary">#000000</color>
 
-    <color name="contact_picker_button_text_color">@color/primary_color</color>
+    <color name="contact_picker_button_text_color">@*com.android.messaging:color/primary_color</color>
 
     <color name="widget_text_color">#424242</color>
     <color name="widget_incoming_text_color">@android:color/white</color>
@@ -171,8 +171,4 @@
     <color name="fastscroll_preview_text_color">#ffffff</color>
 
     <color name="google_gray">#F1F1F1</color>
-
-  <color name="button_text">#000000</color>
-  <color name="navigation_bar_color">@android:color/white</color>
-
 </resources>
