--- a/res/drawable-anydpi/msg_bubble_input.9.xml
+++ b/res/drawable-anydpi/msg_bubble_input.9.xml
@@ -4,13 +4,13 @@
         <shape>
             <stroke
                 android:width="1dp"
-                android:color="@*android:color/black" />
+                android:color="@android:color/black" />
             <corners
                 android:bottomLeftRadius="50.0dp"
                 android:bottomRightRadius="50.0dp"
                 android:topLeftRadius="50.0dp"
                 android:topRightRadius="50.0dp" />
-            <solid android:color="@*android:color/white" />
+            <solid android:color="@android:color/white" />
         </shape>
     </item>
 
