--- a/res/drawable/rounded_corners.xml
+++ b/res/drawable/rounded_corners.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#BDBDBD"/>
+            <solid android:color="@android:color/switch_thumb_normal_material_dark"/>
             <corners android:radius="50dp"/>
         </shape>
     </item>
@@ -14,7 +14,7 @@
         android:top="0.5dp"
         android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff"/>
+            <solid android:color="@android:color/white"/>
             <corners android:radius="50dp"/>
         </shape>
     </item>
