--- a/res/drawable/msg_bubble_incoming.9.xml
+++ b/res/drawable/msg_bubble_incoming.9.xml
@@ -7,6 +7,9 @@
                 android:bottomRightRadius="20.0dp"
                 android:topLeftRadius="0.0dp"
                 android:topRightRadius="20.0dp" />
+            <stroke
+                android:color="#000000"
+                android:width="5dp" />
         </shape>
     </item>
 </layer-list>
