--- a/res/drawable/msg_bubble_outgoing.9.xml
+++ b/res/drawable/msg_bubble_outgoing.9.xml
@@ -7,6 +7,10 @@
                 android:bottomRightRadius="20.0dp"
                 android:topLeftRadius="20.0dp"
                 android:topRightRadius="0.0dp" />
+
+            <stroke
+                android:color="#000000"
+                android:width="5dp" />
         </shape>
     </item>
 </layer-list>
